# test-cmake-googletest-repo

./: CMakeLists.txt
src/: CMakeLists.txt  SomeClass.cpp  SomeClass.hpp
test/: CMakeLists.txt  SomeClassTest.cpp
